--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,56 @@
+version: "3.9"
+
 services:
   dns-server:
     container_name: dns-server
     hostname: dns-server
     image: technitium/dns-server:latest
-    # For DHCP deployments, use "host" network mode and remove all the port mappings, including the ports array by commenting them
-    # network_mode: "host"
     ports:
-      - "5380:5380/tcp" #DNS web console (HTTP)
-      # - "53443:53443/tcp" #DNS web console (HTTPS)
-      - "53:53/udp" #DNS service
-      - "53:53/tcp" #DNS service
-      # - "853:853/udp" #DNS-over-QUIC service
-      # - "853:853/tcp" #DNS-over-TLS service
-      # - "443:443/udp" #DNS-over-HTTPS service (HTTP/3)
-      # - "443:443/tcp" #DNS-over-HTTPS service (HTTP/1.1, HTTP/2)
-      # - "80:80/tcp" #DNS-over-HTTP service (use with reverse proxy or certbot certificate renewal)
-      # - "8053:8053/tcp" #DNS-over-HTTP service (use with reverse proxy)
-      # - "67:67/udp" #DHCP service
+      - "5380:5380/tcp"   # Web console (HTTP)
+      - "53443:53443/tcp" # Web console (HTTPS)
+      - "53:53/udp"       # DNS service
+      - "53:53/tcp"       # DNS service
+      - "853:853/tcp"     # DNS-over-TLS
+      - "853:853/udp"     # DNS-over-QUIC
+      - "443:443/tcp"     # DNS-over-HTTPS (HTTP/1.1, HTTP/2)
+      - "443:443/udp"     # DNS-over-HTTPS (HTTP/3)
     environment:
-      - DNS_SERVER_DOMAIN=dns-server #The primary domain name used by this DNS Server to identify itself.
-      # - DNS_SERVER_ADMIN_PASSWORD=password #DNS web console admin user password.
-      # - DNS_SERVER_ADMIN_PASSWORD_FILE=password.txt #The path to a file that contains a plain text password for the DNS web console admin user.
-      # - DNS_SERVER_PREFER_IPV6=false #DNS Server will use IPv6 for querying whenever possible with this option enabled.
-      # - DNS_SERVER_WEB_SERVICE_LOCAL_ADDRESSES=172.17.0.1,127.0.0.1 #Comma separated list of network interface IP addresses that you want the web service to listen on for requests. The "172.17.0.1" address is the built-in Docker bridge. The "[::]" is the default value if not specified. Note! This must be used only with "host" network mode.
-      # - DNS_SERVER_WEB_SERVICE_HTTP_PORT=5380 #The TCP port number for the DNS web console over HTTP protocol.
-      # - DNS_SERVER_WEB_SERVICE_HTTPS_PORT=53443 #The TCP port number for the DNS web console over HTTPS protocol.
-      # - DNS_SERVER_WEB_SERVICE_ENABLE_HTTPS=false #Enables HTTPS for the DNS web console.
-      # - DNS_SERVER_WEB_SERVICE_USE_SELF_SIGNED_CERT=false #Enables self signed TLS certificate for the DNS web console.
-      # - DNS_SERVER_WEB_SERVICE_TLS_CERTIFICATE_PATH=/etc/dns/tls/cert.pfx #The file path to the TLS certificate for the DNS web console.
-      # - DNS_SERVER_WEB_SERVICE_TLS_CERTIFICATE_PASSWORD=password #The password for the TLS certificate for the DNS web console.
-      # - DNS_SERVER_WEB_SERVICE_HTTP_TO_TLS_REDIRECT=false #Enables HTTP to HTTPS redirection for the DNS web console.
-      # - DNS_SERVER_OPTIONAL_PROTOCOL_DNS_OVER_HTTP=false #Enables DNS server optional protocol DNS-over-HTTP on TCP port 8053 to be used with a TLS terminating reverse proxy like nginx.
-      # - DNS_SERVER_RECURSION=AllowOnlyForPrivateNetworks #Recursion options: Allow, Deny, AllowOnlyForPrivateNetworks, UseSpecifiedNetworkACL.
-      # - DNS_SERVER_RECURSION_NETWORK_ACL=192.168.10.0/24, !192.168.10.2 #Comma separated list of IP addresses or network addresses to allow access. Add ! character at the start to deny access, e.g. !192.168.10.0/24 will deny entire subnet. The ACL is processed in the same order its listed. If no networks match, the default policy is to deny all except loopback. Valid only for `UseSpecifiedNetworkACL` recursion option.
-      # - DNS_SERVER_RECURSION_DENIED_NETWORKS=1.1.1.0/24 #Comma separated list of IP addresses or network addresses to deny recursion. Valid only for `UseSpecifiedNetworkACL` recursion option. This option is obsolete and DNS_SERVER_RECURSION_NETWORK_ACL should be used instead.
-      # - DNS_SERVER_RECURSION_ALLOWED_NETWORKS=127.0.0.1, 192.168.1.0/24 #Comma separated list of IP addresses or network addresses to allow recursion. Valid only for `UseSpecifiedNetworkACL` recursion option.  This option is obsolete and DNS_SERVER_RECURSION_NETWORK_ACL should be used instead.
-      # - DNS_SERVER_ENABLE_BLOCKING=false #Sets the DNS server to block domain names using Blocked Zone and Block List Zone.
-      # - DNS_SERVER_ALLOW_TXT_BLOCKING_REPORT=false #Specifies if the DNS Server should respond with TXT records containing a blocked domain report for TXT type requests.
-      # - DNS_SERVER_BLOCK_LIST_URLS= #A comma separated list of block list URLs.
-      # - DNS_SERVER_FORWARDERS=1.1.1.1, 8.8.8.8 #Comma separated list of forwarder addresses.
-      # - DNS_SERVER_FORWARDER_PROTOCOL=Tcp #Forwarder protocol options: Udp, Tcp, Tls, Https, HttpsJson.
-      # - DNS_SERVER_LOG_USING_LOCAL_TIME=true #Enable this option to use local time instead of UTC for logging.
+      - DNS_SERVER_DOMAIN=dns.bdtunnel.com
+      - DNS_SERVER_ADMIN_PASSWORD_FILE=/run/secrets/dns_admin_password
+      - DNS_SERVER_WEB_SERVICE_ENABLE_HTTPS=true
+      - DNS_SERVER_WEB_SERVICE_USE_SELF_SIGNED_CERT=false
+      - DNS_SERVER_WEB_SERVICE_TLS_CERTIFICATE_PATH=/etc/dns/tls/cert.pfx
+      - DNS_SERVER_WEB_SERVICE_TLS_CERTIFICATE_PASSWORD_FILE=/run/secrets/dns_cert_password
+      - DNS_SERVER_RECURSION=AllowOnlyForPrivateNetworks
+      - DNS_SERVER_RECURSION_NETWORK_ACL=192.168.0.0/16,10.0.0.0/8,!0.0.0.0/0
+      - DNS_SERVER_FORWARDERS=1.1.1.1,8.8.8.8
+      - DNS_SERVER_FORWARDER_PROTOCOL=Udp
+      - DNS_SERVER_ENABLE_BLOCKING=true
+      - DNS_SERVER_LOG_USING_LOCAL_TIME=true
     volumes:
       - config:/etc/dns
+      - ./tls:/etc/dns/tls:ro
+    secrets:
+      - dns_admin_password
+      - dns_cert_password
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "https://localhost:53443"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     sysctls:
-      - net.ipv4.ip_local_port_range=1024 65535
+      net.ipv4.ip_local_port_range: "1024 65535"
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
 
 volumes:
-    config:
+  config:
+
+secrets:
+  dns_admin_password:
+    file: ./secrets/dns_admin_password.txt
+  dns_cert_password:
+    file: ./secrets/dns_cert_password.txt
